Create common endpoints for server and client
